feat TestPG AES-256-GCM 암호화 연동 구현

--- a/modules/bootstrap/api-payment-gateway/src/main/resources/application.yml
+++ b/modules/bootstrap/api-payment-gateway/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: payment-gateway
   datasource:
     url: jdbc:h2:mem:pgdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
@@ -17,3 +19,11 @@ spring:
 server:
   port: 8080
 
+
+
+# TestPG 연동 설정
+pg:
+  test:
+    api-url: https://api-test-pg.bigs.im
+    api-key: 11111111-1111-4111-8111-111111111111
+    iv: AAAAAAAAAAAAAAAA
